# time_management

./: .env.dev  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  mypy.ini  requirements.txt  setup.cfg  start_db.py
.github/workflows/: lint.yml  packaging.yml
alembic/: env.py
alembic/versions/: d1d41a33522e_created_user.py
src/: manage.py
src/time_manager/: .dbconfig.json  .gitignore  asgi.py  main.py  settings.py  urls.py  wsgi.py
src/time_manager/apps/auth/: __init__.py  apps.py  authentication.py  serializers.py  tests.py  urls.py  views.py
src/time_manager/apps/core/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
src/time_manager/apps/core/migrations/: 0001_initial.py  0002_use_fk_instead_of_hardcoded_values.py  0003_auto_20200611_1601.py  0004_auto_20200617_2018.py  0005_comment_user.py
src/time_manager/apps/core/tests/: helpers.py  test_authorization.py  test_comments.py  test_time_request.py  test_user.py
src/time_manager/apps/core/utils/: constants.py  types.py
src/time_manager/db/: __init__.py  exceptions.py
src/time_manager/db/sql/: base.py  session.py  user.py
src/time_manager/db/sql/models/: user.py
src/time_manager/routers/: __init__.py  auth.py  common.py  maintenance.py  users.py
src/time_manager/schemas/: extra.py  user.py
src/time_manager/utils/: auth.py  client.py  db.py  settings.py
src/time_manager_admin/: base_command.py  manage.py
src/time_manager_admin/commands/: generate_config.py  migrate.py
src/time_manager_admin/commands/alembic/: env.py
tests/integration/: conftest.py
tests/integration/time_manager/routers/: test_auth.py
tests/unit/db/dao/: conftest.py  test_user.py
tests/unit/routers/: test_users.py
tests/unit/schemas/: test_user.py
tests/unit/time_manager/db/dao/: conftest.py
tests/unit/time_manager/routers/: test_auth.py
tests/unit/time_manager/utils/: test_db.py
tests/unit/utils/: test_utils.py
(+2 files in other folders)
