[metadata]
name = Time Manager
version = 0.1.0
description = Tool letting people to track their time
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = Time Management
author = "Nikita Vakula"
license = MIT License
author_email = "programmistov.programmist@gmail.com"
url = "https://github.com/krjakbrjak/time_management"
python_requires = >= 3.8.*
classifiers =
    Framework :: Django
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
include_package_data = True
scripts =
install_requires =
    Django==3.0.6
setup_requires =
    setuptools
package_dir=
    =src
packages=find:

[options.packages.find]
where=src