[metadata]
name = Time Manager
version = 0.1.1
description = Tool letting people to track their time
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = Time Management
author = "Nikita Vakula"
license = MIT License
author_email = "programmistov.programmist@gmail.com"
url = "https://github.com/krjakbrjak/time_management"
python_requires = >= 3.8.*
classifiers =
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
include_package_data = False
install_requires =
    pydantic[email]
    uvicorn
    fastapi
    passlib[bcrypt]
    python-jose[cryptography]
    python-multipart
    aiohttp[speedups]

    alembic
    sqlalchemy
    sqlalchemy-stubs
    psycopg2-binary
setup_requires =
    setuptools
package_dir=
    =src
packages=find_namespace:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
  time_manager_admin = time_manager_admin.manage:main
